# dotfiles

./: Makefile  README.md  _vimrc  autocmds.lua  base.lua  coc-settings.json  colorscheme.lua  dotsetup.sh  gvimrc  init.lua  keymaps.lua  nvbashrc.sh  nvchad.sh  nvclean.sh  nvim.sh  nvim_setup.sh  nvimlua.sh  nvimrc  nvks.sh  nvsetup.sh  plugin_settings.lua  pylintrc  setup_by_plur.sh  tmux.conf  vimrc
config/nvim/: init.lua
config/nvim/lua/: base.lua  colorscheme.lua  keymaps.lua  plugin.lua  plugin_settings.lua
config/nvim/lua/lsp/: init.lua  lsp.lua
config/nvim/plugin/: packer_compiled.lua
dein/rc/: dein.toml  dein_lazy.toml
lua/: autocmds.lua  base.lua  colorscheme.lua  keymaps.lua  plugin.lua  plugin_settings.lua
lvim/: lazy-lock.json
nks/: init.lua  lazy-lock.json
nks/lua/custom/plugins/: init.lua
nksb/: init.lua  lazy-lock.json
nlit/: init.lua  nvim-pack-lock.json
nmin/: init.lua  lazy-lock.json
nold/: init.lua
nvim/: init.lua
nvim/lua/: colorscheme.lua  keymaps.lua  mine.lua  plugin.lua  plugin_settings.lua  plugins.lua
nvim/lua/custom/: my.lua
nvim/lua/kickstart/: init.lua
nvim_packer/lua/: colorscheme.lua  core.lua  plugin_settings.lua
nvks/: init.lua  lazy-lock.json
nvks/lua/custom/: my.lua
nvmin/: init.lua
plur_dotfiles/: install_uv.sh  pyproject.toml  run.sh
plur_dotfiles/src/plur_dotfiles/: __init__.py  host_ops_str.py  main.py  nvim.py
plur_dotfiles/src/plur_dotfiles/clitools/: nvim.py  tmux.py
ruff/: ruff.toml
snacks/: init.lua  lazy-lock.json
wezterm/: appearance.lua  tmux.lua  wezterm.lua
(+12 files in other folders)
